[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Proto2/scnProto2.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Door/scrDoor.gd" type="Script" id=2]
[ext_resource path="res://Sprites/UI/sprInteract.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 100.521, 147.378 )

[sub_resource type="Animation" id=2]
resource_name = "anmInteract"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprInterract:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprInterract:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("sprInterract:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.5 ),
"transitions": PoolRealArray( 1, 0.4, 1 ),
"update": 0,
"values": [ Vector2( 0, -156 ), Vector2( 0, -156 ), Vector2( 0, -217 ) ]
}

[node name="oDoor" type="Area2D" groups=[
"Door",
]]
script = ExtResource( 2 )
ToWhere = ExtResource( 1 )

[node name="Collider2d" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="sprInterract" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 0, -156 )
scale = Vector2( 0.308594, 0.308594 )
texture = ExtResource( 3 )

[node name="interactAnm" type="AnimationPlayer" parent="."]
anims/anmInteract = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Door_body_exited"]
